--- a/ADMIN_TUBIREADY/ADMIN_TUBIREADY.vbproj
+++ b/ADMIN_TUBIREADY/ADMIN_TUBIREADY.vbproj
@@ -18,6 +18,8 @@
     <PackageReference Include="Guna.Charts.WinForms" Version="1.1.0" />
     <PackageReference Include="Guna.UI2.WinForms" Version="2.0.4.7" />
     <PackageReference Include="MongoDB.Driver" Version="3.5.2" />
+    <PackageReference Include="MySql.Data" Version="9.5.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
   </ItemGroup>
 
   <ItemGroup>
